--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dans-hats",
+  "homepage": "https://lougoncharenko.github.io/dans_hat_ecommerce_site",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -30,6 +31,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -54,6 +57,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
-    "file-loader": "^6.2.0"
+    "file-loader": "^6.2.0",
+    "gh-pages": "^6.1.0"
   }
 }
